# distributed-funds

./: .gitignore  .gitmodules  Cargo.toml  README.md  flake.nix  package-lock.json  package.json
dnas/grant_pools/workdir/: dna.yaml
dnas/grant_pools/zomes/coordinator/grants/: Cargo.toml
dnas/grant_pools/zomes/coordinator/grants/src/: agent_to_evm_wallet.rs  all_application_templates.rs  all_applications.rs  all_evaluation_templates.rs  all_grant_pools.rs  all_time_periods.rs  application.rs  application_claim_coupons.rs  application_template.rs  evaluation.rs  evaluation_template.rs  evaluator_to_applications.rs  grant_pool.rs  grant_pool_outcome.rs  grant_pool_to_applications.rs  lib.rs  my_applications.rs  sponsor_to_grant_pools.rs  time_period.rs
dnas/grant_pools/zomes/coordinator/grants/tests/: validation_tests.rs
dnas/grant_pools/zomes/coordinator/grants/tests/shared_test/: mod.rs
rain/: .env.example  build-abi.sh  build-copy-abi.sh  deploy-clone-factory.sh  deploy-contracts.sh  expression.json  foundry.toml
rain/broadcast/DeployCloneFactory.sol/137/: run-1709313347.json  run-1709313354.json
rain/broadcast/DeployFlow.sol/137/: run-1709313572.json  run-1709313579.json  run-1709313670.json  run-1709313683.json
rain/cache/: solidity-files-cache.json
rain/scripts/: CallFlow.sol  DeployCloneFactory.sol  DeployFlow.sol  ShowEncoding.sol
rain/src/: Flow.sol  MyCloneFactory.sol  grantpool-flow.rain  nft-flow.rain
tests/: package.json
tests/src/grant_pools/grants/: common.ts  (+17 more)
ui/: .gitignore  package.json  svelte.config.js  tailwind.config.js  tsconfig.json  vite.config.ts
ui/src/: App.svelte
ui/src/lib/: config.ts
ui/src/routes/: +layout.svelte  +page.svelte  +page.ts
workdir/: happ.yaml  web-happ.yaml
(+155 files in other folders)
