[package]
name = "grants"
version = "0.0.1"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]
name = "grants"

[dependencies]
hdk = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
grants_integrity = { workspace = true }
alloy-primitives = { workspace = true }
rust_decimal = { workspace = true }

[dev-dependencies]
holochain = { version = "0.2.6", default-features = false, features = [
    "test_utils",
] }
tokio = { version = "1.3", features = ["full"] }
futures = { version = "0.3.1", default-features = false }
